<package format="3">
  <name>tmc_control_msgs</name>
  <version>2.0.0</version>
  <description>The msgs for control some hardware.</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Akiyoshi Ochiai</author>
  <author>Keisuke Takeshita</author>
  <author>Kiyohiro Sogen</author>
  <author>Koji Terada</author>
  <author>Koki Kataoka</author>
  <author>Tamaki Nishino</author>
  <author>Yusuke Ota</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
